name:                haskell-base62
version:             0.1.0.0
homepage:            http://github.com/eunmin/haskell-base62
author:              Eunmin Kim 
maintainer:          telepopsound@gmail.com 
category:            Util
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Base62
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable base62 
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-base62
  default-language:    Haskell2010

test-suite haskell-base62-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-base62
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eunmin/haskell-base62
